# raspberry-pi-netboot

./: .gitignore  Makefile  README.md  build.pkr.hcl  config.env.example  sources.pkr.hcl  variables.pkr.hcl
node-configs/: node.env.example
packer/: build.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
packer/templates/: 00-eth0-prefix.pkrtpl.hcl
provision/: Cargo.toml
provision/src/: config.rs  graph.rs  lib.rs  main.rs  steps.rs
scripts/: configure-bootloader.sh  configure-fleet.sh  configure-initramfs.sh  configure-iscsi.sh
