[package]
name = "provision"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
fs_extra = "1.3.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sys-mount = "3.0.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt", "macros", "rt-multi-thread", "process", "sync", "time"] }
